# go-ruck-yourself

./: .cursorrules  .env  .env.loadtest  .gitignore  .sentry_config.json.template  ACTIVE_SESSION_REFACTOR_PLAN.md  ADD_DAU_TRACKING.sql  AGENTS.md  AI_CHEERLEADER_REMOTE_CONFIG_SETUP.md  AllTrails_Integration_Implementation.md  BATTERY_PERFORMANCE_OPTIMIZATIONS.md  COMPLETE_TRIGGER_FIX.sql  CRITICAL_ACHIEVEMENT_CLEANUP.sql  CRITICAL_FIX_achievement_system.sql  CRITICAL_FIX_achievement_system_v2.sql  CRITICAL_FIX_auth_user_sync.sql  CRITICAL_FIX_oauth_duplicate_users.sql  Content_Marketing_Plan.md  DATABASE_INDEX_REFERENCE.md  DATA_MODEL_REFERENCE.md  EMERGENCY_DISABLE_TRIGGER.sql  FEATURE_FLAG_MIGRATION_GUIDE.md  FINAL_DISTANCE_CLEANUP.sql  FIREBASE_REMOTE_CONFIG_SETUP.md  FIXED_AUTH_TRIGGER.sql  FIX_auth_trigger_constraints.sql  GOOGLE_OAUTH_REDIRECT_SETUP.md  GPS_OPTIMIZATION_PLAN.md  IN_APP_REVIEW_SYSTEM.md  LIVE_RUCK_MESSAGING.md  NUCLEAR_ACHIEVEMENT_CLEANUP.sql  PARTITION_IMPLEMENTATION.sql  PAUSE_RESUME_BUG.md  PERFORMANCE_SCALING_ANALYSIS.md  Procfile  README-LOAD-TESTING.md  RUNNA_ANALYSIS.md  RuckClub_API_Consistency_Report.md  SENTRY_SETUP.md  STREAK_FIX_SUMMARY.md  (+151 more)
RuckTracker/: .env  ARIZE_SETUP.md  DUEL_COMPLETION_DEPLOYMENT.md  MAILJET_SETUP.md  Procfile  README.md  add_achievement_indexes.py  add_notification_preferences_to_users.sql  add_strava_columns.sql  advanced_optimizations.sql  app.py  backfill_ruck_917_to_duel.sql  background_scheduler.py  blog.py  blog_post_prompt.md  check_bucket_exists.sql  check_duel_completion.py  check_stuck_sessions.py  (+38 more)
(+1042 files in other folders)
