[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-restful>=0.3.10",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "geopy>=2.4.1",
    "marshmallow>=3.26.1",
    "flask-limiter>=3.6.0", # Added flask-limiter
    "pillow>=10.0.0", # Added for avatar image processing
    "redis>=4.0.0,<5.0.0", # Added Redis client for rate limiting
    "psutil>=5.8.0", # Added for system memory and CPU monitoring
    "requests>=2.28.0", # Added for Mailjet API integration
]
